changed stupid ass translation

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -1,11 +1,11 @@
 {
   "item.jigsaw_pp.elephant_pickaxe": "Elephant Pickaxe",
-  "item.jigsaw_pp.elephant_pickaxe.desc": "§6The more hot the more fast",
+  "item.jigsaw_pp.elephant_pickaxe.desc": "§6The hotter - the faster",
 
   "item_group.jigsaw_pp.jigsaw_tab": "Jigsaw II",
 
   "item.jigsaw_pp.moss_elephant_pickaxe": "§aMoss Elephant Pickaxe",
-  "item.jigsaw_pp.moss_elephant_pickaxe.desc": "§2Brings live",
+  "item.jigsaw_pp.moss_elephant_pickaxe.desc": "§2Brings life",
 
   "item.jigsaw_pp.strawberry_elephant_pickaxe": "§cStrawberry Elephant Pickaxe",
   "item.jigsaw_pp.strawberry_elephant_pickaxe.desc": "§4Fossilises living",
