--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -10,6 +10,10 @@
   "item.jigsaw_pp.strawberry_elephant_pickaxe": "§cStrawberry Elephant Pickaxe",
   "item.jigsaw_pp.strawberry_elephant_pickaxe.desc": "§4Fossilises living",
 
+  "item.jigsaw_pp.cum_shard": "§7Cum Shard",
+  "item.jigsaw_pp.cum_shard.desc": "Your mum is cumming",
+
+
 
 
 
