--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -13,6 +13,12 @@
   "item.jigsaw_pp.cum_shard": "§7Cum Shard",
   "item.jigsaw_pp.cum_shard.desc": "Your mum is cumming",
 
+  "item.jigsaw_pp.raw_cum": "§7Raw Cum",
+  "item.jigsaw_pp.raw_cum.desc": "Cum embedded in a stone",
+
+  "item.jigsaw_pp.dust_of_babushka": "§7Raw Cum",
+  "item.jigsaw_pp.dust_of_babushka.desc": "You can smell it",
+
 
 
 
