Cum v0.3 (Sword Fst Person is broken)

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -16,8 +16,12 @@
   "item.jigsaw_pp.raw_cum": "§7Raw Cum",
   "item.jigsaw_pp.raw_cum.desc": "Cum embedded in a stone",
 
-  "item.jigsaw_pp.dust_of_babushka": "§7Raw Cum",
+  "item.jigsaw_pp.dust_of_babushka": "§7Dust of Babushka",
   "item.jigsaw_pp.dust_of_babushka.desc": "You can smell it",
+
+  "item.jigsaw_pp.sword_of_babushka_dust": "§4Sword Of Babushka Dust",
+  "item.jigsaw_pp.sword_of_babushka_dust.desc": "This sword is the strength of all babushka",
+
 
 
 
