Bro, you need the Moss Elephant
Now elephanting recipe exists.
+ sound registry added
+ recipe registry added

ToDrist:
ToDristList: (bugfix)
1) добавить фильтр на отсутствующие в json рецептах предметы
https://github.com/Tutorials-By-Kaupenjoe/Forge-Tutorial-1.20.X/blob/31-recipeTypes/src/main/java/net/kaupenjoe/tutorialmod/block/entity/GemPolishingStationBlockEntity.java#L156

2) добавить слону КД, т.е. таймер в тик апдейт

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -32,5 +32,12 @@
 
 
 
-  "block.jigsaw_pp.coal_fossil": "Coal fossil"
+  "block.jigsaw_pp.coal_fossil": "Coal fossil",
+
+
+
+
+
+
+  "subtitles.moss_elephant.proot": "Moss elephant proots"
 }
