--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -39,5 +39,6 @@
 
 
 
-  "subtitles.moss_elephant.proot": "Moss elephant proots"
+  "subtitles.moss_elephant.proot": "Moss elephant proots",
+  "subtitles.moss_elephant.angry_proot": "Moss elephant proots with anger"
 }
