--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -50,5 +50,6 @@
   "subtitles.moss_elephant.proot": "Moss elephant proots",
   "subtitles.moss_elephant.angry_proot": "Moss elephant proots with anger",
   "recipe.jigsaw_pp.elephanting": "Moss Elephanting",
-  "item.jigsaw_pp.moss_elephant_thumb": "Moss Elephant Thumb"
+  "item.jigsaw_pp.moss_elephant_thumb": "Moss Elephant Thumb",
+  "item.jigsaw_pp.moss_elephant_thumb.desc": "§7Give item to §aMoss Elephant§7 for the result"
 }
