--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -56,5 +56,7 @@
   "item.jigsaw_pp.hazmat_helmet": "Hazmat helmet",
   "item.jigsaw_pp.hazmat_chestplate": "Hazmat chestplate",
   "item.jigsaw_pp.hazmat_leggings": "Hazmat leggings",
-  "item.jigsaw_pp.hazmat_boots": "Hazmat boots"
+  "item.jigsaw_pp.hazmat_boots": "Hazmat boots",
+
+  "item.jigsaw_pp.gas_mask_helmet": "Gas Mask"
 }
