--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -14,6 +14,7 @@
   "block.jigsaw_pp.raw_teapot": "Raw teapot",
   "block.jigsaw_pp.teapot": "Teapot",
   "block.jigsaw_pp.black_teapot": "Black teapot",
+  "subtitles.whistle": "Whistle",
 
   "item.jigsaw_pp.cum_shard": "§7Cum Shard",
   "item.jigsaw_pp.cum_shard.desc": "Your mum is cumming",
