--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -30,7 +30,7 @@
 
   "item.jigsaw_pp.sword_of_babushka_dust": "§4Sword Of Babushka Dust",
   "item.jigsaw_pp.sword_of_babushka_dust.desc": "This sword is the strength of all babushka",
-
+  "item.jigsaw_pp.beaweed_seeds": "Beaweed Seeds",
   "item.jigsaw_pp.sweet_bread": "Sweet Bread",
   "item.jigsaw_pp.sweet_bread.desc": "§7Produced by the §aMoss Elephant§7 in a moment of fear",
 
