--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -57,5 +57,6 @@
   "effect.jigsaw_pp.purgative": "Strong purgative",
 
   "item.jigsaw_pp.pilule.duration" : "§7Effect duration: ",
-  "misc.jigsaw_pp.second": "§7s"
+  "misc.jigsaw_pp.second": "§7s",
+  "item.jigsaw_pp.pilule.sec_effect" : "§7+Effect: "
 }
