Purgen factory GUI update & CatalystRecipe type
goyda

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -67,5 +67,6 @@
   "effect.jigsaw_pp.random_bad_effect": "Bad Effect",
   "effect.jigsaw_pp.random_good_effect": "Good Effect",
 
-  "subtitles.factory_heater": "Factory heater is working"
+  "subtitles.factory_heater": "Factory heater is working",
+  "recipe.jigsaw_pp.purgen_catalyst": "Purgen reaction catalyst"
 }
