--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -68,5 +68,9 @@
   "effect.jigsaw_pp.random_good_effect": "Good Effect",
 
   "subtitles.factory_heater": "Factory heater is working",
-  "recipe.jigsaw_pp.purgen_catalyst": "Purgen reaction catalyst"
+  "recipe.jigsaw_pp.purgen_catalyst": "Purgen reaction catalyst",
+
+  "jigsaw_pp.tooltip.liquid.amount": "%s mB",
+  "jigsaw_pp.tooltip.liquid.amount.with.capacity": "%s / %s mB",
+  "jigsaw_pp.tooltip.liquid.mb": " mB"
 }
