--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -10,7 +10,7 @@
   "item.jigsaw_pp.strawberry_elephant_pickaxe": "§cStrawberry Elephant Pickaxe",
   "item.jigsaw_pp.strawberry_elephant_pickaxe.desc": "§4Fossilises living",
 
-
+  "block.jigsaw_pp.kega": "Fucking Kega",
   "block.jigsaw_pp.raw_teapot": "Raw teapot",
   "block.jigsaw_pp.teapot": "Teapot",
   "block.jigsaw_pp.black_teapot": "Black teapot",
@@ -36,7 +36,7 @@
 
 
 
-
+  "subtitles.alpha_bomb": "Alpha Bomb Activated Sound",
   "subtitles.moss_elephant.proot": "Moss elephant proots",
   "subtitles.moss_elephant.angry_proot": "Moss elephant proots with anger",
   "recipe.jigsaw_pp.elephanting": "Moss Elephanting",
