--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -10,7 +10,8 @@
   "item.jigsaw_pp.strawberry_elephant_pickaxe": "§cStrawberry Elephant Pickaxe",
   "item.jigsaw_pp.strawberry_elephant_pickaxe.desc": "§4Fossilises living",
 
-  "block.jigsaw_pp.kega": "Fucking Kega",
+  "block.jigsaw_pp.kega_null": "Empty Fucking Kega",
+  "block.jigsaw_pp.kega": "Charged Fucking Kega",
   "block.jigsaw_pp.raw_teapot": "Raw teapot",
   "block.jigsaw_pp.teapot": "Teapot",
   "block.jigsaw_pp.black_teapot": "Black teapot",
