"block.jigsaw_pp.kega.desc": "Atomic Boom-Boom",

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -12,6 +12,7 @@
 
   "block.jigsaw_pp.kega_null": "Empty Fucking Kega",
   "block.jigsaw_pp.kega": "Charged Fucking Kega",
+  "block.jigsaw_pp.kega.desc": "Atomic Boom-Boom",
   "block.jigsaw_pp.raw_teapot": "Raw teapot",
   "block.jigsaw_pp.teapot": "Teapot",
   "block.jigsaw_pp.black_teapot": "Black teapot",
