--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.jigsaw_pp.elephant_pickaxe.desc": "§6The hotter - the faster",
 
   "item_group.jigsaw_pp.jigsaw_tab": "Jigsaw II",
+  "item_group.jigsaw_pp.jigsaw_tab_materials": "Jigsaw II: Materials",
 
   "item.jigsaw_pp.moss_elephant_pickaxe": "§aMoss Elephant Pickaxe",
   "item.jigsaw_pp.moss_elephant_pickaxe.desc": "§2Brings life",
