Fix rad effect and add gay

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -61,6 +61,7 @@
 
   "effect.jigsaw_pp.poop": "Poop on the screen",
   "effect.jigsaw_pp.purgative": "Strong purgative",
+  "effect.jigsaw_pp.radiation": "Radiation",
 
   "item.jigsaw_pp.pilule.duration" : "§7§oEffect duration: ",
   "misc.jigsaw_pp.second": "§7s",
