--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -99,6 +99,7 @@
 
   "subtitles.factory_heater": "Factory heater is working",
   "recipe.jigsaw_pp.purgen_catalyst": "Purgen reaction catalyst",
+  "recipe.jigsaw_pp.purgen_factory": "Purgen factory",
 
   "jigsaw_pp.tooltip.liquid.amount": "%s mB",
   "jigsaw_pp.tooltip.liquid.amount.with.capacity": "%s / %s mB",
