--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -60,6 +60,10 @@
   "item.jigsaw_pp.crystal_purgen_pilule": "Crystal purgen pilule",
   "item.jigsaw_pp.empty_pilule": "Pilule",
 
+  "item.jigsaw_pp.prh_tnt": "Explosion chance",
+  "item.jigsaw_pp.prh_clock": "Longevity",
+  "item.jigsaw_pp.prh_purity": "Purity",
+
   "item.jigsaw_pp.blabbit_spawn_egg": "Blabbit spawn egg",
   "subtitles.blabbit_live": "Blabbit mumbles",
   "entity.jigsaw_pp.blabbit": "Blabbit",
