Some jigsawish patches && BALLS
BALLIN'

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -60,7 +60,7 @@
   "item.jigsaw_pp.crystal_purgen_pilule": "Crystal purgen pilule",
   "item.jigsaw_pp.empty_pilule": "Pilule",
 
-  "item.jigsaw_pp.blabbit_spawn_egg": "Blabbit spawn egg",
+  "item.jigsaw_pp.blabbit_spawn_egg": "§dBlabbit§r spawn egg",
   "subtitles.blabbit_live": "Blabbit mumbles",
   "entity.jigsaw_pp.blabbit": "Blabbit",
 
@@ -103,5 +103,13 @@
 
   "jigsaw_pp.tooltip.liquid.amount": "%s mB",
   "jigsaw_pp.tooltip.liquid.amount.with.capacity": "%s / %s mB",
-  "jigsaw_pp.tooltip.liquid.mb": " mB"
+  "jigsaw_pp.tooltip.liquid.mb": " mB",
+
+
+  "jigsaw_pp.divider_of_localisation_version": "ALL THAT ADDED AFTER THIS IS NOT RU-LOCALISED UNTIL RELEASE! PLEASE DO NOT ADD LOCALES ABOVE THIS LINE. ONLY UNDER",
+
+
+  "item.jigsaw_pp.blabball.desc": "§7Shear a leashed §dBlabbit",
+  "item.jigsaw_pp.blabball": "Blabball",
+  "item.jigsaw_pp.blabegg": "Blabbit Egg"
 }
