--- a/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
@@ -60,7 +60,7 @@
   "item.jigsaw_pp.crystal_purgen_pilule": "Кристально чистая таблетка с пургеном",
   "item.jigsaw_pp.empty_pilule": "Пилюля",
 
-  "item.jigsaw_pp.blabbit_spawn_egg": "Яйцо призыва Пузайца",
+  "item.jigsaw_pp.blabbit_spawn_egg": "Яйцо призыва §dПузайца",
   "subtitles.blabbit_live": "Пузаяц бормочет",
   "entity.jigsaw_pp.blabbit": "Пузаяц",
 
