--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -115,5 +115,7 @@
 
   "item.jigsaw_pp.useless_pie.desc": "§7Each one of us is a useless pie",
   "item.jigsaw_pp.useless_pie": "Useless pie",
-  "block.jigsaw_pp.yoba": "Yoba"
+  "block.jigsaw_pp.yoba": "Yoba",
+  "block.jigsaw_pp.yoba_poop": "Diarrhea Yoba",
+  "block.jigsaw_pp.pooped_bricks": "Pooped Bricks"
 }
