Blabbit now can be cut.
And it's matter what blade you wield)))
+ lenin appears in assets...

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -117,5 +117,6 @@
   "item.jigsaw_pp.useless_pie": "Useless pie",
   "block.jigsaw_pp.yoba": "Yoba",
   "block.jigsaw_pp.yoba_poop": "Diarrhea Yoba",
-  "block.jigsaw_pp.pooped_bricks": "Pooped Bricks"
+  "block.jigsaw_pp.pooped_bricks": "Pooped Bricks",
+  "block.jigsaw_pp.lenin_bust": "Lenin bust"
 }
