And Lenin is young again
Lenin is fully working now (but without craft, idk) And some YOBA fixes

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -121,8 +121,10 @@
 
   "item.jigsaw_pp.useless_pie.desc": "§7Each one of us is a useless pie",
   "item.jigsaw_pp.useless_pie": "Useless pie",
-  "block.jigsaw_pp.yoba": "Yoba",
-  "block.jigsaw_pp.yoba_poop": "Diarrhea Yoba",
+  "block.jigsaw_pp.yoba": "Snide dough ball",
+  "block.jigsaw_pp.yoba_poop": "Malicious dough ball",
   "block.jigsaw_pp.pooped_bricks": "Pooped Bricks",
-  "block.jigsaw_pp.lenin_bust": "Lenin bust"
+  "block.jigsaw_pp.lenin_bust": "Lenin bust",
+  "block.jigsaw_pp.mold_block": "Mold block",
+  "item.jigsaw_pp.mold": "Mold"
 }
