THE GREAT BOBROHOST WILL PUNISH  INNOCENT
oh f....

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -126,5 +126,7 @@
   "block.jigsaw_pp.pooped_bricks": "Pooped Bricks",
   "block.jigsaw_pp.lenin_bust": "Lenin bust",
   "block.jigsaw_pp.mold_block": "Mold block",
-  "item.jigsaw_pp.mold": "Mold"
+  "item.jigsaw_pp.mold": "Mold",
+  "block.jigsaw_pp.beaver_computer": "Beaverhost",
+  "effect.jigsaw.beaver_so_deffect": "Brown screen of Death"
 }
