--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -129,5 +129,6 @@
   "item.jigsaw_pp.mold": "Mold",
   "block.jigsaw_pp.beaver_computer": "Beaverhost",
   "effect.jigsaw.beaver_so_deffect": "Brown screen of Death",
-  "item.jigsaw_pp.beaver_knife": "Beaver knife"
+  "item.jigsaw_pp.beaver_knife": "Beaver knife",
+  "item.jigsaw_pp.beaver_axe": "Beaver axe"
 }
