--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -130,5 +130,7 @@
   "block.jigsaw_pp.beaver_computer": "Beaverhost",
   "effect.jigsaw.beaver_so_deffect": "Brown screen of Death",
   "item.jigsaw_pp.beaver_knife": "Beaver knife",
-  "item.jigsaw_pp.beaver_axe": "Beaver axe"
+  "item.jigsaw_pp.beaver_axe": "Beaver axe",
+  "item.jigsaw_pp.pigkaxe": "Pigkaxe",
+  "item.jigsaw_pp.pigkaxe.desc": "§7Hit pig by §6lightning rod"
 }
