--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -132,5 +132,7 @@
   "item.jigsaw_pp.beaver_knife": "Beaver knife",
   "item.jigsaw_pp.beaver_axe": "Beaver axe",
   "item.jigsaw_pp.pigkaxe": "Pigkaxe",
-  "item.jigsaw_pp.pigkaxe.desc": "§7Hit pig by §6lightning rod"
+  "item.jigsaw_pp.pigkaxe.desc": "§7Hit pig by §6lightning rod",
+  "item.jigsaw_pp.tube_19": "Tube №19",
+  "subtitles.clown_horn": "Clown noise"
 }
