--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -134,5 +134,7 @@
   "item.jigsaw_pp.pigkaxe": "Pigkaxe",
   "item.jigsaw_pp.pigkaxe.desc": "§7Hit pig by §6lightning rod",
   "item.jigsaw_pp.tube_19": "Tube №19",
-  "subtitles.clown_horn": "Clown noise"
+  "subtitles.clown_horn": "Clown noise",
+  "item.jigsaw_pp.eggs": "Eggs",
+  "effect.jigsaw_pp.egged": "Egg magic"
 }
