--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -136,5 +136,6 @@
   "item.jigsaw_pp.tube_19": "Tube №19",
   "subtitles.clown_horn": "Clown noise",
   "item.jigsaw_pp.eggs": "Eggs",
-  "effect.jigsaw_pp.egged": "Egg magic"
+  "effect.jigsaw_pp.egged": "Egg magic",
+  "item.jigsaw_pp.totem_of_shit": "Totem of shit"
 }
