--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -138,5 +138,6 @@
   "item.jigsaw_pp.eggs": "Eggs",
   "effect.jigsaw_pp.egged": "Egg magic",
   "item.jigsaw_pp.totem_of_shit": "Totem of shit",
-  "item.jigsaw_pp.jotaro_hat": "Jotaro's Cap"
+  "item.jigsaw_pp.jotaro_hat": "Jotaro's Cap",
+  "item.jigsaw_pp.pooped_bread": "Pooped bread"
 }
