--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -139,5 +139,9 @@
   "effect.jigsaw_pp.egged": "Egg magic",
   "item.jigsaw_pp.totem_of_shit": "Totem of shit",
   "item.jigsaw_pp.jotaro_hat": "Jotaro's Cap",
-  "item.jigsaw_pp.pooped_bread": "Pooped bread"
+  "item.jigsaw_pp.pooped_bread": "Pooped bread",
+  "item.jigsaw_pp.beaver_helmet": "Beaver mask",
+  "item.jigsaw_pp.beaver_chestplate": "Beaver suit",
+  "item.jigsaw_pp.beaver_boots": "Beaver boots",
+  "item.jigsaw_pp.beaver_bomb": "Beaver Bomb"
 }
