--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -148,5 +148,8 @@
   "item.jigsaw_pp.beaver_ammo": "Beaver ammo",
   "item.jigsaw_pp.beaweed_plate": "Beaweed plate",
   "item.jigsaw_pp.smart_beaweed_plate": "Smart beaweed plate",
-  "item.jigsaw_pp.beaverzooka.desc": "§7Uses beaver ammo to shoot"
+  "item.jigsaw_pp.beaverzooka.desc": "§7Uses beaver ammo to shoot",
+  "item.jigsaw_pp.shit_cup": "The Great Shit cup",
+  "item.jigsaw_pp.admin_stick": "Admin ♂ anal ♂ stick",
+  "block.jigsaw_pp.pw_hat": "PWGood's tophat"
 }
