--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -151,5 +151,6 @@
   "item.jigsaw_pp.beaverzooka.desc": "§7Uses beaver ammo to shoot",
   "item.jigsaw_pp.shit_cup": "The Great Shit cup",
   "item.jigsaw_pp.admin_stick": "Admin ♂ anal ♂ stick",
-  "block.jigsaw_pp.pw_hat": "PWGood's tophat"
+  "block.jigsaw_pp.pw_hat": "PWGood's tophat",
+  "item.jigsaw_pp.tree_launcher": "Tree launcher"
 }
