--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -163,7 +163,7 @@
   "painting.jigsaw_pp.potsight.author": "Beaver",
   "painting.jigsaw_pp.pug.author": "Beaver",
   "painting.jigsaw_pp.slonik.author": "Beaver",
-  "painting.jigsaw_pp.svyatostrun.author": "Beaver"
+  "painting.jigsaw_pp.svyatostrun.author": "Beaver",
 
   "item.jigsaw_pp.jotaro_hat": "Jotaro's Cap",
   "item.jigsaw_pp.pooped_bread": "Pooped bread",
