--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -163,7 +163,7 @@
   "painting.jigsaw_pp.potsight.author": "Beaver",
   "painting.jigsaw_pp.pug.author": "Beaver",
   "painting.jigsaw_pp.slonik.author": "Beaver",
-  "painting.jigsaw_pp.svyatostrun.author": "Beaver"
+  "painting.jigsaw_pp.svyatostrun.author": "Beaver",
 
   "item.jigsaw_pp.jotaro_hat": "Jotaro's Cap",
   "item.jigsaw_pp.pooped_bread": "Pooped bread",
@@ -182,5 +182,6 @@
   "block.jigsaw_pp.purgen_factory.desc": "§7Should be placed onto §6Factory Heater",
   "block.jigsaw_pp.purgen_factory.desc_two": "§7Fill it with fluid using bucket",
   "item.jigsaw_pp.batch_size_card.desc": "§7Increases size of produced §6purgen§r's batch",
-  "block.jigsaw_pp.factory_heater.desc": "§7Should be placed onto §6Heat sources"
+  "block.jigsaw_pp.factory_heater.desc": "§7Should be placed onto §6Heat sources",
+  "item.jigsaw_pp.plunger": "Plunger"
 }
