--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -137,6 +137,7 @@
   "block.jigsaw_pp.mold_block": "Mold block",
   "item.jigsaw_pp.mold": "Mold",
   "block.jigsaw_pp.beaver_computer": "Beaverhost",
+  "block.jigsaw_pp.thron": "The wood thron (awful)",
   "effect.jigsaw.beaver_so_deffect": "Brown screen of Death",
   "item.jigsaw_pp.beaver_knife": "Beaver knife",
   "item.jigsaw_pp.beaver_axe": "Beaver axe",
