THERE WILL BE POOP! SHIT! MAN IN THE MIRROR NODS HIS ASS
Jetstream chair & drist tnt stick fixes

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -185,5 +185,8 @@
   "block.jigsaw_pp.factory_heater.desc": "§7Should be placed onto §6Heat sources",
   "item.jigsaw_pp.plunger": "Plunger",
   "block.jigsaw_pp.drist_tnt": "Drist TNT",
-  "item.jigsaw_pp.drist_tnt_stick": "Drist TNT stick"
+  "item.jigsaw_pp.drist_tnt_stick": "Drist TNT stick",
+  "entity.jigsaw_pp.jetstream_chair": "Jetstream Chair",
+  "item.jigsaw_pp.jetstream_chair": "Jetstream Chair",
+  "entity.jigsaw_pp.moss_elephant": "Moss elephant"
 }
