перевод яиц яйца яйца
gurami gugas kukaragua

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -105,7 +105,8 @@
   "subtitles.factory_heater": "Factory heater is working",
   "recipe.jigsaw_pp.purgen_catalyst": "Purgen reaction catalyst",
   "recipe.jigsaw_pp.purgen_factory": "Purgen factory",
-  "item.jigsaw_pp.slon_gun":  "Slon gun",
+  "item.jigsaw_pp.slon_gun":  "Elephant gun",
+  "item.jigsaw_pp.slon_gun_green":  "Green elephant gun",
 
   "jigsaw_pp.tooltip.liquid.amount": "%s mB",
   "jigsaw_pp.tooltip.liquid.amount.with.capacity": "%s / %s mB",
@@ -182,5 +183,31 @@
   "block.jigsaw_pp.purgen_factory.desc": "§7Should be placed onto §6Factory Heater",
   "block.jigsaw_pp.purgen_factory.desc_two": "§7Fill it with fluid using bucket",
   "item.jigsaw_pp.batch_size_card.desc": "§7Increases size of produced §6purgen§r's batch",
-  "block.jigsaw_pp.factory_heater.desc": "§7Should be placed onto §6Heat sources"
+  "block.jigsaw_pp.factory_heater.desc": "§7Should be placed onto §6Heat sources",
+
+  "item.jigsaw_pp.diamond_iron_ingot": "Diamond iron ingot",
+  "block.jigsaw_pp.diamond_iron_block": "Diamond iron block",
+  "item.jigsaw_pp.arm": "Beaver arm",
+  "item.jigsaw_pp.beaver_staff": "Beaver staff",
+  "item.jigsaw_pp.beaver_staff_honey": "Honey beaver staff",
+  "item.jigsaw_pp.brown_cutlass": "Brown cutlass",
+  "item.jigsaw_pp.cross": "Cross",
+  "item.jigsaw_pp.ladle": "Ladle",
+  "item.jigsaw_pp.empty_bottle": "Empty bottle",
+  "item.jigsaw_pp.rose_bottle": "Glassing",
+  "item.jigsaw_pp.ershik": "Toilet assistant",
+  "item.jigsaw_pp.paddle": "Paddle",
+  "item.jigsaw_pp.pirate_cutlass": "Pirate cutlass",
+  "item.jigsaw_pp.pizdoor": "Pizdoor",
+  "item.jigsaw_pp.ponos_cutlass": "Ponos cutlass",
+  "item.jigsaw_pp.pricel_rapier": "Pricel rapier",
+  "item.jigsaw_pp.road_sign": "Road sing",
+  "item.jigsaw_pp.shishkin": "Sir John Phallustiff",
+  "item.jigsaw_pp.shit_stick": "Shit stick",
+  "item.jigsaw_pp.skewer": "Skewer",
+  "item.jigsaw_pp.pomato": "Pomato",
+  "item.jigsaw_pp.half_heart_of_the_sea": "Half heart of the sea",
+  "item.jigsaw_pp.dellist": "Delete from jigsaw tier list",
+  "item.jigsaw_pp.beaweed_checker": "Beaweed checker",
+  "block.jigsaw_pp.bottle_o_pricel": "Bottle of potsight"
 }
