--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -139,6 +139,8 @@
   "effect.jigsaw_pp.egged": "Egg magic",
   "item.jigsaw_pp.totem_of_shit": "Totem of shit",
 
+  "subtitles.beaver_spider_chop": "Beaver spider crawls",
+  "subtitles.beaver_spider_ambient": "Beaver spider",
 
   "painting.jigsaw_pp.avebread.title": "Ave bread",
   "painting.jigsaw_pp.balls.title": "Balls",
