--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -190,5 +190,7 @@
   "item.jigsaw_pp.jetstream_chair": "Jetstream Chair",
   "entity.jigsaw_pp.moss_elephant": "Moss elephant",
   "block.jigsaw_pp.plate_bread": "Full plate of Sweet Bread",
-  "block.jigsaw_pp.plate_empty": "Empty plate"
+  "block.jigsaw_pp.plate_empty": "Empty plate",
+  "entity.jigsaw_pp.stone_beaver": "Stone Beaver",
+  "item.jigsaw_pp.stone_beaver_spawn_egg": "§6Stone Beaver§r spawn egg"
 }
