--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -245,6 +245,7 @@
   "item.jigsaw_pp.poops": "Poops",
   "entity.jigsaw_pp.poops": "Poops",
   "item.jigsaw_pp.poopis": "Poopis",
-  "entity.jigsaw_pp.poopis": "Poopis"
+  "entity.jigsaw_pp.poopis": "Poopis",
+  "item.jigsaw_pp.straps": "Colonel straps"
 
 }
