--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -246,6 +246,7 @@
   "entity.jigsaw_pp.poops": "Poops",
   "item.jigsaw_pp.poopis": "Poopis",
   "entity.jigsaw_pp.poopis": "Poopis",
-  "item.jigsaw_pp.straps": "Colonel straps"
+  "item.jigsaw_pp.straps": "Colonel straps",
+  "block.jigsaw_pp.pig_tuffyak": "Pig Tuffyak"
 
 }
